stars overflow fix

--- a/frontend/css/shootingstars.css
+++ b/frontend/css/shootingstars.css
@@ -1,3 +1,7 @@
+body{
+  overflow-x: hidden;
+}
+
 @keyframes animateBg {
   0%,100%
   {
@@ -9,7 +13,6 @@
   }
 }
 .stars{
-  overflow: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
